Showing pop over for the course cards in catalog. Note: 1. This code is highly volatile 2. Any thing happens in future to this area, remove it

--- a/src/Components/Generic/Auth/auth.scss
+++ b/src/Components/Generic/Auth/auth.scss
@@ -1,5 +1,10 @@
 @import "../../../../static/styles/globals.scss";
 
+.authForm {
+  position: relative;
+  z-index: 1024;
+}
+
 .ad_nav_tab_title {
   text-align: center;
 
