1. Passed auth handler to topcourses 2. Passed initial props to pages 3. Linked detailed pop title to course page 4. Top courses are listed through new file and have pop up

--- a/src/Components/Generic/Cards/LgCard/detailedPop.scss
+++ b/src/Components/Generic/Cards/LgCard/detailedPop.scss
@@ -16,6 +16,10 @@
     color: $White-0;
     padding: 1rem;
     border-radius: 2px 2px;
+
+    &:hover {
+      cursor: pointer;
+    }
   }
 
   .description {
