--- a/src/Components/Plugins/Index/Mentions/Mentions.scss
+++ b/src/Components/Plugins/Index/Mentions/Mentions.scss
@@ -17,15 +17,31 @@
 }
 
 .partners {
-  margin-top: 3rem;
+  margin-top: 4rem;
+  margin-bottom: 4rem;
   display: grid;
-  grid-template-columns: repeat(3, auto);
-  align-items: center;
-  justify-items: center;
-  grid-gap: auto;
+  grid-template-columns: repeat(3, 1fr);
+  place-content: center;
+  place-items: center;
+  grid-gap: 1rem;
+
+  .dummy {
+    width: 330px;
+    height: 130px;
+
+    background: $White-0b;
+    border: 1px solid #c6c6c6;
+    box-sizing: border-box;
+    /* mild */
+    box-shadow: 10px 10px 20px rgba(0, 0, 0, 0.15);
+    border-radius: 5px;
+  }
 
   div {
-    align-self: center;
-    justify-content: center;
+    transition: 0.2s ease;
+    &:hover {
+      cursor: pointer;
+      transform: translateY(-5px);
+    }
   }
 }
