--- a/src/Components/Plugins/Index/Partners/Partners.scss
+++ b/src/Components/Plugins/Index/Partners/Partners.scss
@@ -16,7 +16,8 @@
 }
 
 .partners {
-  margin-top: 2rem;
+  margin-top: 4rem;
+  margin-bottom: 4rem;
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   place-content: center;
@@ -27,7 +28,7 @@
     width: 330px;
     height: 130px;
 
-    background: #c4c4c4;
+    background: $White-0b;
     border: 1px solid #c6c6c6;
     box-sizing: border-box;
     /* mild */
