--- a/src/Components/Plugins/Index/HeroCard/HeroCard.scss
+++ b/src/Components/Plugins/Index/HeroCard/HeroCard.scss
@@ -1,42 +1,76 @@
 @import "../../../../../static/styles/globals.scss";
 
 .container {
-  padding: 20px 0 20px 0;
-  display: grid;
-  grid-template-columns: 12.5% 70% 12.5%;
-  grid-template-rows: 80% auto;
-  grid-gap: 2.5% 2.5%;
-  height: 70%;
+  //padding: 20px 0 20px 0;
+  //display: grid;
+  //grid-template-columns: 12.5% 70% 12.5%;
+  //grid-template-rows: 80% auto;
+  //grid-gap: 2.5% 2.5%;
+  //height: 70%;
+  padding: 0 2rem 2rem 2rem;
 }
 
 .heroCard {
-  background: $grad-card-1;
-  box-shadow: $shadow-all-3;
-  border-radius: 20px;
+  //background: $White-0;
+  border-radius: 40px;
+  //border: 1px solid $White-3;
   width: 100%;
   display: grid;
-  grid-template-columns: 1fr 1fr;
+  grid-template-columns: 1fr auto;
   grid-gap: 20px;
-  padding: 1% 3% 2rem 3%;
-
   align-items: center;
+  padding: 0 3rem 0 3rem;
+  z-index: -10;
 
-  span {
-    text-align: center;
-    font-family: Scope One, Roboto;
-    font-style: normal;
-    font-weight: bold;
-    font-size: 64px;
-    line-height: 89px;
+  .tag {
+    position: relative;
+    margin-top: 5rem;
+    z-index: 5;
 
-    color: #ffffff;
+    h1 {
+      text-align: left;
+      font-family: Scope One, Roboto;
+      font-style: normal;
+      font-weight: bold;
+      font-size: 64px;
+      line-height: 89px;
+      color: $Black-1;
+    }
+
+    span {
+      text-align: left;
+      font-family: Scope One, Roboto;
+      font-style: normal;
+      font-weight: bold;
+      font-size: 64px;
+      line-height: 89px;
+      color: $White-0;
+      background: $Yellow-2;
+      border-radius: 10px;
+      padding: 0.5rem 1rem 0.1rem 1rem;
+    }
+
   }
 
-  img {
+  .landingImg {
     justify-self: center;
     width: 480px;
     height: 480px;
+    margin-left: 1rem;
+    z-index: 5;
   }
+
+  .bg {
+    position: absolute;
+    right: 1rem;
+    top: 0rem;
+    transform: rotateZ(-5deg);
+    width: 640px;
+    height: 640px;
+    z-index: 1;
+
+  }
+
 }
 
 %lgBtn {
@@ -57,11 +91,12 @@
   transition: 0.2s ease;
 
   color: #ffffff;
+  z-index: 5;
 }
 
 .heroBtns {
   justify-self: center;
-  margin-top: 20px;
+  margin-top: 4rem;
   .exploreBtn {
     @extend %lgBtn;
     background: $Blue-1;
@@ -69,22 +104,24 @@
 
     &:hover {
       cursor: pointer;
-      background: white;
       transform: scale(1.1);
-      color: $Blue-1;
+      -webkit-box-shadow: $shadow-all-1;
+      -moz-box-shadow: $shadow-all-1;
+      box-shadow: $shadow-all-1;
     }
   }
 
   .contributeBtn {
     @extend %lgBtn;
-    background: $Blue-2;
+    background: $Base-primary;
     margin-left: 20px;
 
     &:hover {
       cursor: pointer;
-      background: white;
       transform: scale(1.1);
-      color: $Blue-2;
+      -webkit-box-shadow: $shadow-all-1;
+      -moz-box-shadow: $shadow-all-1;
+      box-shadow: $shadow-all-1;
     }
   }
 }
