--- a/src/Components/Plugins/Index/WorkingBox/WorkingBox.scss
+++ b/src/Components/Plugins/Index/WorkingBox/WorkingBox.scss
@@ -1,74 +1,89 @@
 @import "../../../../../static/styles/globals.scss";
 
 .container {
-  padding: 1.5rem 8rem 0 8rem;
+  margin-top: 4rem;
+  padding: 2rem 4rem 0 4rem;
+}
+
+.title {
+  font-family: Scope One, Roboto;
+  font-style: normal;
+  font-weight: bolder;
+  font-size: 48px;
+  line-height: 66px;
+
+  color: $White-0;
+  background: $Base-primary;
+  padding: 1rem 5rem 0.5rem 2rem;
+  border-radius: 5px;
 }
 
 .grid {
+  margin-top: 4rem;
   display: grid;
-  grid-template-columns: 1fr auto;
+  grid-template-columns: auto auto;
   grid-gap: 3rem;
-  place-content: center;
-  justify-content: center;
-  .title {
-    // padding-left: 1rem;
-    font-family: Scope One, Roboto;
-    font-style: normal;
-    font-weight: bolder;
-    font-size: 48px;
-    line-height: 66px;
+  place-content: space-around;
 
-    color: $Black-1;
-  }
-
-  .actions {
-    margin-top: 2rem;
-    width: 100%;
-    height: 370px;
-
-    background: #ffffffe3;
-
-    /* mild */
-    box-shadow: $shadow-1;
-    border-radius: 10px;
-
-    span {
-      padding: 2rem;
-      font-style: normal;
-      font-weight: bolder;
-      font-size: 28px;
-      line-height: 56px;
-    }
-    .list {
-      padding: 1rem 1rem 2rem 1rem;
-
-      p {
-        padding-left: 2rem;
-        font-style: normal;
-        font-weight: bold;
-        font-size: 24px;
-        line-height: 40px;
-      }
-
-      span {
-        padding: 0.5rem 1rem 0.5rem 1rem;
-        margin-right: 1rem;
-        font-style: normal;
-        font-weight: bolder;
-        font-size: 28px;
-      }
-    }
-  }
-
-  .secondary {
+  .actionCards {
     display: flex;
-    flex-direction: column-reverse;
-    // justify-content: space-between;
-    .introClip {
+    flex-direction: row;
+
+    .primary {
+      width: 336px;
+      padding: 0 1rem;
+      box-shadow: $shadow-1;
+      border-radius: 5px;
+
+      .cardTitle {
+        font-style: normal;
+        font-weight: 900;
+        font-size: 28px;
+        text-align: center;
+        color: $White-0;
+      }
+
+      .list {
+        margin-top: 1rem;
+
+        p {
+          font-style: normal;
+          font-weight: bold;
+          font-size: 20px;
+          line-height: 43px;
+          color: $White-0;
+        }
+      }
+
+      .more {
+        margin-top: 2rem;
+        position: relative;
+        color: white;
+        float: right;
+        font-size: 16px;
+
+        &:hover {
+          cursor: pointer;
+        }
+      }
+    }
+
+    .learn {
+      background: $grad-1;
+    }
+
+    .contrib {
+      margin-left: 1rem;
+      background: $grad-6;
+    }
+  }
+
+
+  .introClip {
       height: 370px;
       width: 470px;
       justify-self: right;
       box-shadow: $shadow-all-3;
     }
-  }
+
 }
